# PMRS

./: .gitignore  CMakeLists.txt  README.md  TPMRSAnalysis.cpp  TPMRSAnalysis.h  TPMRSAxisymRKSolver.cpp  TPMRSAxisymRKSolver.h  TPMRSCoupPoElaAnalysis.cpp  TPMRSCoupPoElaAnalysis.h  TPMRSCoupPoElaMemory.cpp  TPMRSCoupPoElaMemory.h  TPMRSCouplPoroElast.cpp  TPMRSCouplPoroElast.h  TPMRSCouplPoroPlast.cpp  TPMRSCouplPoroPlast.h  TPMRSElastoPlastic.cpp  TPMRSElastoPlastic.h  TPMRSElastoPlasticMemory.cpp  TPMRSElastoPlasticMemory.h  TPMRSElastoPlastic_impl.h  TPMRSFullyCoupledAnalysis.cpp  TPMRSFullyCoupledAnalysis.h  TPMRSGeomechanicAnalysis.cpp  TPMRSGeomechanicAnalysis.h  TPMRSInterpolator.cpp  TPMRSInterpolator.h  TPMRSKappaParameters.cpp  TPMRSKappaParameters.h  TPMRSMemory.cpp  TPMRSMemory.h  TPMRSMemoryPoroElast.cpp  TPMRSMemoryPoroElast.h  TPMRSMemoryPoroPlast.cpp  TPMRSMemoryPoroPlast.h  TPMRSMonoPhasic.h  TPMRSMonoPhasicAnalysis.cpp  TPMRSMonoPhasicAnalysis.h  TPMRSMonoPhasicCG.cpp  TPMRSMonoPhasicCG.h  TPMRSMonoPhasicCG_impl.h  (+50 more)
doc/: PMRS.tex
doc/references/: references.bib
input/: Bradley_linear_elastic_solution.xml  Bradley_wellbore_3D.xml  Con_Wellbore.xml  Conf_Hydrostatic.xml  Coupl_poroelast_DP.xml  Coupl_poroelast_PoroPerm.xml  Coupl_poroelast_PoroPermSP.xml  DrillingBoreHole_2D.xml  DrillingBoreHole_2D_spatial_rates.xml  Files_description.txt  Fjaer_linear_poro_elastic_solution.xml  HorizonyalWellbore_3D.xml  Kirschs_linear_elastic_solution.xml  Nonlinear_DrillingBoreHole_2D.xml  Nonlinear_DrillingBoreHole_3D.xml  Nonlinear_DrillingBoreHole_3D_Vertical_Stress.xml  Nonlinear_DrillingBoreHole_SS_2D.xml  Nonlinear_DrillingBoreHole_SS_2D_NewtonAccel.xml  Nonlinear_DrillingBoreHole_TS_2D_NewtonAccel.xml  Nonlinear_Terzaghi_2D_Time_Evolution.xml  Pap_1st_TerzaghAnaly.xml  Pap_1st_wellbore_2D.xml  Pap_2th_ProductionRate.xml  Pap_2th_ProductionSpace.xml  Pap_2th_ProductionTime.xml  Pap_2th_Productivity.xml  Pap_2th_RungKutta.xml  Pap_2th_Terzagh2D.xml  Pap_3d_Bradley.xml  Pap_3d_Bradley3D.xml  Pap_Conf_Bradley.xml  Pap_Conf_HydTest.xml  Pap_Conf_Well.xml  Permeability_zone1_models.xml  Permeability_zone2_models.xml  RungKutta.xml  Terzaghi_2D.xml  Terzaghi_2D_CrankNicolson.xml  Terzaghi_2D_Rate.xml  Terzaghi_2D_Time_Evolution.xml  (+24 more)
input/PoreCollapse/: Reservoir_2D_3D_Collapse.geo  horizontal_wellbore_collapse_DS_Davies_30_1.xml
input/esfi_verification/: NDrilling_SDM_3_2D_FC_A_20.xml  NDrilling_SDM_3_2D_MF_A_20.xml
input/meshes/: AnticlineReservoir3D.geo  Bradley2D.geo  Bradley2D.msh  Con_Wellbore.geo  Con_Wellbore.msh  CoupPoroPerm.geo  CoupPoroPerm.msh  Fjar2D.geo  Fjar2D.msh  HorizontalReservoir_3D.msh  HorizontalWellbore.msh  HydrostTest.geo  Hydrostatic_2D.geo  Hydrostatic_2D.msh  Reservoir_2D_3D_Collapse.geo  Reservoir_2D_3D_Collapse.msh  RungKutta2D.geo  Terzaghi_2D.geo  Terzaghi_2D.msh  Terzaghi_3D.geo  Terzaghi_3D.msh  Uniaxial_2D.geo  Uniaxial_2D.msh  Wellbore.msh  (+26 more)
scripts/: welbore_nonlinear_steady_state.sh  welbore_rates.sh  wellbore_nonlinear_steady_state.sh  wellbore_nonlinear_transient.sh  wellbore_nonlinear_transient_3d.sh  wellbore_transient.sh
(+31 files in other folders)
